# todd-howard

./: .gitignore  Session.vim  pyproject.toml
notebooks/: Untitled.ipynb  Untitled9.ipynb  todd.ipynb  todd.ju.py
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
notebooks/spacy/: chapter1_lesson5.ipynb  chapter1_lesson5.ju.py
